[package]
name = "reth-engine"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reth-ethereum = { path = "../../../../reth/crates/ethereum/reth", features = [
    "node",
    "test-utils",
] }
reth-payload-builder = { path = "../../../../reth/crates/payload/builder" }
alloy-genesis = "2.1.0"
alloy-primitives.workspace = true
alloy-rpc-types-engine.workspace = true
sha2.workspace = true
futures-util = "0.3.32"
eyre = "0.6.12"
serde_json.workspace = true



[lints]
workspace = true
